src/main/metadata/objects/Lead_Details__c.object
<CustomObject>
    <description>This is used to capture lead related details such as interested vehicle, competitor vehicle.</description>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Created to capture vehicle brand.</description>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Model_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Model Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Car_Model__c.Status__c</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Lead Details (Car Model Competitor)</relationshipLabel>
        <relationshipName>Lead_Details_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vehicle Model details from car Model object.</description>
        <label>Car Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Car_Model__c.Status__c</field>
                <operation>equals</operation>
                <value>Own Sellable</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Lead Details</relationshipLabel>
        <relationshipName>Lead_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Vehicle class.</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <description>Vehicle color details.</description>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Market selection.</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                    <default>true</default>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>Details of vehicle mileage.</description>
        <label>Mileage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Lead__c</fullName>
        <description>This is used to link lead record.</description>
        <label>Related Lead</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lead Details</relationshipLabel>
        <relationshipName>Lead_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trade_In_Vehicle__c</fullName>
        <label>Trade In Vehicle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <label>Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Trade In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Type__c</fullName>
        <label>Vehicle Model Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own Sellable</fullName>
                </value>
                <value>
                    <fullName>Own Non Sellable</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_of_Manufacture__c</fullName>
        <label>Year of Manufacture</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Lead Details</label>
    <nameField>
        <displayFormat>LDI-{0000}</displayFormat>
        <label>Lead Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Details</pluralLabel>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <description>Use this to capture competitor vehicles for this lead</description>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interested_Vehicle</fullName>
        <active>true</active>
        <description>Use this to capture details of interested vehicle</description>
        <label>Interested Vehicle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade_In</fullName>
        <active>true</active>
        <description>Use this to capture details of trade in vehicle</description>
        <label>Trade In</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>